<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gray_marble">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonCalculate"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:orientation="vertical"
        android:background="#FFFFFF">

         <TextView
             android:id="@+id/textViewName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@string/nana_afia_twumasi_ankrah"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.066"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginLeft="15dp"
             android:layout_marginStart="15dp" />

        <TextView
            android:id="@+id/textViewClassDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cmsc_355_spring_2020"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewName"
            app:layout_constraintBottom_toTopOf="@+id/editTextAssignmentEarned"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

        <EditText
            android:id="@+id/editTextAssignmentEarned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_the_assignment_points_earned"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextAssignmentTotal"
            android:layout_marginBottom="15dp"
            android:inputType="numberDecimal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <EditText
            android:id="@+id/editTextAssignmentTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_the_assignment_points_possible"
            android:textSize="14sp"
            android:inputType="numberDecimal"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <EditText
            android:id="@+id/editTextProjectEarned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_the_team_project_points_earned"
            android:textSize="14sp"
            android:inputType="numberDecimal"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <EditText
            android:id="@+id/editTextProjectTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/enter_the_team_project_points_possible"
            android:inputType="numberDecimal"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextMidtermEarned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_the_midterm_exam_points_earned"
            android:textSize="14sp"
            android:inputType="numberDecimal"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <EditText
            android:id="@+id/editTextMidtermTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_the_midterm_exam_points_possible"
            android:textSize="14sp"
            android:inputType="numberDecimal"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <EditText
            android:id="@+id/editTextFinalEarned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_the_final_exam_points_earned"
            android:textSize="14sp"
            android:inputType="numberDecimal"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <EditText
            android:id="@+id/editTextFinalTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_the_final_exam_points_possible"
            android:textSize="14sp"
            android:inputType="numberDecimal"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/calculate"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        android:background="#9c225D"
        android:textColor="#FFFAFA"/>


</RelativeLayout>